[feat] Add fractal layout for the B+-tree leaves of the device levels
This commit introduces an additional B+-tree leaf layout for the device
levels named fractal_leaf.c inspired by "Fractal Prefetching B+-trees"
by Chen et al. In addition to the default slot_array layout, the fractal
layout does not perform binary search within a leaf node. Instead, to
reduce cache misses, it keeps a guard table at the start of the leaf,
where each guard points to approximately every 256 B. As a result, it
reduces cache misses. Initial experimental results show up to 10%
improvement in throughput for look-up operations. We will also add a
fractal layout for the index nodes in upcoming commits. Please note that
this is still an experimental feature, so we do not enable it by
default.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,10 @@ if(PARALLAX_BUILD_TESTING)
   add_executable(test_dirty_scans test_dirty_scans.c arg_parser.c)
   target_link_libraries(test_dirty_scans "${PROJECT_NAME}")
 
+  add_executable(test_fractal_layout test_fractal_layout.c
+                                     ../lib/btree/fractal_leaf.c)
+  target_link_libraries(test_fractal_layout "${PROJECT_NAME}")
+
   find_library(BDB_LIBRARY NAMES libdb.so)
 
   if(BDB_LIBRARY AND NOT ${BDB_PATH} STREQUAL "")
@@ -53,6 +57,8 @@ if(PARALLAX_BUILD_TESTING)
 
   add_parallax_test(NAME test_index_node COMMAND run_test.sh test_index_node)
   add_parallax_test(NAME test_leaf_node COMMAND run_test.sh test_leaf_node)
+  add_parallax_test(NAME test_fractal_layout COMMAND run_test.sh
+                    test_fractal_layout)
 
   add_parallax_test(
     NAME
