--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -40,6 +40,7 @@ set(LIB_C_SOURCE_FILES
     btree/dynamic_leaf.c
     btree/device_level.c
     btree/dev_leaf.c
+    btree/fractal_leaf.c
     btree/dev_index.c
     btree/gc.c
     btree/medium_log_LRU_cache.c
