--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,7 +55,7 @@ if(PARALLAX_BUILD_TESTING)
       --num_of_kvs=1000000
       --BDB_file=${BDB_PATH})
     add_executable(manto manto.c)
-    target_link_libraries(manto "${PROJECT_NAME}" ${BDB_LIBRARY})
+    target_link_libraries(manto "${PROJECT_NAME}" ${BDB_LIBRARY} ${ART_LIB})
   endif()
 
   add_parallax_test(NAME test_index_node COMMAND run_test.sh test_index_node)
