--- a/scripts/CI/yml/lint.yml
+++ b/scripts/CI/yml/lint.yml
@@ -29,10 +29,10 @@ CPD:
     stage: lint
     script:
         - echo -e "\e[0Ksection_start:`date +%s`:CPD_lib_section\r\e[0K CPD lib"
-        - python3 ./scripts/CI/cpd_output.py 100 ./lib c
+        - python3 ./scripts/CI/cpd_output.py 100 ./lib cpp
         - echo -e "\e[0Ksection_end:`date +%s`:CPD_lib_section\r\e[0K"
         - echo -e "\e[0Ksection_start:`date +%s`:CPD_tests_section[collapsed=true]\r\e[0K CPD tests"
-        - python3 ./scripts/CI/cpd_output.py 100 ./tests c || exit 0
+        - python3 ./scripts/CI/cpd_output.py 100 ./tests cpp || exit 0
         - echo -e "\e[0Ksection_end:`date +%s`:CPD_tests_section\r\e[0K"
     needs: []
 
