--- a/scripts/CI/yml/lint.yml
+++ b/scripts/CI/yml/lint.yml
@@ -20,8 +20,9 @@ build_clang-tidy:
 build_cppcheck:
     stage: lint
     script:
-        - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=1024 -iYCSB-CXX -ibuild --inline-suppr --suppress=missingInclude
-        - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=1024 -iYCSB-CXX -ibuild --inline-suppr --suppress=missingInclude &> log.txt
+        - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=1024 -iYCSB-CXX -ibuild --inline-suppr --suppress=missingInclude --suppress=missingIncludeSystem
+          &> log.txt
+        - cat log.txt
         - python scripts/CI/check-cppcheck-output.py
     needs: []
 
