--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-plot ARG2 using 2:xtic(1) title "RocksDB" lc rgb '#9400d3'0
 build/
 compile_commands.json
 .clangd/
@@ -15,3 +14,4 @@ docs/latex
 *.tmp
 venv/
 CMakeUserPresets.json
+.vscode
