--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -355,3 +355,15 @@ release_test_level_write_cursors:
         - make test_wcursors_append_segment;cd tests;
         - ctest -R ^test_wcursors_append_segment$
     needs: [release_build_gcc, release_build_clang]
+
+
+release_test_par_threadpool:
+    image: carvicsforth/arch_carv:latest
+    stage: release_test
+    <<: *release_build_commands
+    tags:
+        - kubernetes
+    script:
+        - make test_par_threadpool;cd tests;
+        - ctest -R ^test_par_threadpool$
+    needs: [release_build_gcc, release_build_clang]
